-- ------------------------------------------------------ --
-- Copyright © 2014 AlephCloud Systems, Inc.
-- ------------------------------------------------------ --

Name:                cabal-tools
Version:             0.1
Synopsis:            Tools for specifying and parsing configurations
description:
    Scripts and tools for custom Cabal setups.
    .
    Documentation on how to use this package can be found in the
    <https://github.com/alephcloud/hs-cabal-tools/blob/master/README.md README>
    and in the API documentation.

Homepage:            https://github.com/alephcloud/hs-cabal-tools
Bug-reports:         https://github.com/alephcloud/hs-cabal-tools/issues
License:             MIT
License-file:        LICENSE
Author:              Lars Kuhtz <lars@alephcloud.com>
Maintainer:          Lars Kuhtz <lars@alephcloud.com>
Copyright:           Copyright (c) 2014 AlephCloud, Inc.
Category:            Distribution
Build-type:          Simple

cabal-version:  >= 1.18

extra-doc-files:
    README.md,
    CHANGELOG.md

extra-source-files:
    constraints

source-repository head
    type: git
    location: https://github.com/alephcloud/hs-cabal-tools.git

source-repository this
    type: git
    location: https://github.com/alephcloud/hs-cabal-tools.git
    tag: 0.1

Library
    hs-source-dirs: src
    default-language: Haskell2010

    exposed-modules:
        Distribution.SetupScripts.SourceDependencies

    other-modules:

    build-depends:
        Cabal >= 1.18,
        base >= 4.6 && < 5.0,
        directory >= 1.2.1.0,
        filepath >= 1.3

    ghc-options: -Wall

